# grahamreact

./: .gitignore  README_dump.md  __main__.py  builders.py  checksum.py  command_codes.py  convert_fifo_raw_passthrough.py  convert_fifo_to_csv.py  fifo_chk.sh  main.py  plot_accel.py  pyproject.toml  receive_and_verify.py  visualize.py
block/: basicio.py  ds3231.py  fifo_comms.py  fifo_comms_stats.py  fifo_testing.py  log_accel.py  main.py  testpin.py
block/lib/: icm42688_SPI.py  lis3dh_spi.py
react_schematics/: #auto_saved_files#  12-24 buck.bak  12-24 buck.kicad_sym  _autosave-host_console.kicad_sch  _autosave-power_and_connections.kicad_sch  _autosave-react_schematics.kicad_sch  host_console.kicad_sch  host_console.kicad_sch-bak  power_and_connectors.kicad_sch  react_schematics-eagle-import.kicad_sym  react_schematics.kicad_prl  react_schematics.kicad_pro  react_schematics.kicad_sch  sym-lib-table  untitled.kicad_sch  ~react_schematics.kicad_sch.lck
