[project]
name = "grahamreact"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "pyserial (>=3.5,<4.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "gpiozero (>=2.0.1,<3.0.0)",
    "pigpio (>=1.78,<2.0)",
    "rpi-gpio (>=0.7.1,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.37.0"

[tool.poe.tasks]
api = "fastapi dev main.py --host 0.0.0.0"