[project]
name = "grahamreact"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "pyserial (>=3.5,<4.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "rpi-gpio (>=0.7.1,<0.8.0); platform_system == 'Linux'",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.37.0"
mpremote = "^1.26.1"

[tool.poe.tasks]
api = "fastapi dev main.py --host 0.0.0.0"

[tool.poe.tasks.bmp]
shell = """
    cp command_codes.py ./block/lib
    mpremote rm -r :
    mpremote cp -r ./block :
"""